# birthday-sync

./: Cargo.toml  README.md
.github/workflows/: build-and-upload.yml  rust.yml
src/: caldav.rs  carddav.rs  lib.rs  main.rs  settings.rs
