[package]
name = "birthday-sync"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
minidom = { version = "0.17" }

[dependencies.ical]
version = "0.11"
default-features = false
features = ["ical", "vcard"]
